assets/cc/css/style.css
/* ... */
.panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
    height: 45px;
    border: 1px solid #4577d8;
    font-size: 12px;
    -webkit-transition: all 0.1s linear;
    -moz-transition: all 0.1s linear;
    transition: all 0.1s linear;
    font-family: Gothambook;
}
.panel-login input:hover,
.panel-login input:focus {
    outline:none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    border-color: #ccc;
}
.btn-login {
    background-color: #59B2E0;
    outline: none;
    color: #fff;
    font-size: 14px;
    height: auto;
    font-weight: normal;
    padding: 14px 0;
    text-transform: uppercase;
    border-color: #59B2E6;
}
.btn-login:hover,
.btn-login:focus {
    color: #fff;
    background-color: #53A3CD;
    border-color: #53A3CD;
}
.forgot-password {
    text-decoration: underline;
    color: #888;
}
.forgot-password:hover,
.forgot-password:focus {
    text-decoration: underline;
    color: #666;
}

.btn-register {
    background-color: #1CB94E;
    outline: none;
    color: #fff;
    font-size: 14px;
    height: auto;
    font-weight: normal;
    padding: 14px 0;
    text-transform: uppercase;
    border-color: #1CB94A;
}
.btn-register:hover,
.btn-register:focus {
    color: #fff;
    background-color: #1CA347;
    border-color: #1CA347;
}

.pickblue {
    color:#25377d;
    }

.faq .col-sm-8 {
    padding: 0 30px;
}

.faq h2 {
    color: #EA5B55;
    text-align: center;
    font-family: Gothammedium, sans-serif;
    text-transform: uppercase;
}

.ques {
    padding-left:15px;
    color:#ee7325;
    cursor: pointer;
}

.ques p {
    color: #25377d;
}

.ques li ul {
    list-style-type: none;
    padding: 0;
}

.ques li ul li p {
    color: #4577d8;
}

.contacto {
    background:#F0F0F2;
    color:#fff;
    border:1px solid #25377d;
    padding-bottom: 15px;
}
.contacto_title {
    background:#25377d; color:#fff;
    padding-top:10px; padding-bottom:10px;
    font-size: 16px !important;
    font-weight: 400;
    font-family: Gothambold;
    text-align: center;
}
.contacto .btn{
    background:#E55E52;
    color:#fff; 
    font-family: Gothammedium;
    font-size:26px;
    text-transform:uppercase;
    padding: 6px 12px;
    width: 140px;
    margin: auto;
}
.contacto .form-control {
    margin-bottom:15px;
    background-color:#4577D8;
}

.contacto input::-webkit-input-placeholder, .contacto textarea::-webkit-input-placeholder {
    color: #ffffff;
}

.contacto input, .contacto textarea {
    color: #ffffff;
    font-weight: 500;
}

.contacto textarea {
    height: 150px;
}
/* Copied from old css  JR */
    #footer p, #footer a  {
        color:#25377d;
        font-size: 13px;
        line-height: 1.5;
        font-family: Gothambook;
    }

    #footer hr {
        border-width:2px;
        border-color:#25377d;
    }
    #footer .col-sm-6 {
        padding-left:0px;
        padding-right:0px;
    }
    #footer{
        padding: 0% 10%;
        text-align: center;
        margin: auto;
    }

.parajustigy{   
        text-align: center;
        padding: 1% 2%;
        font-size: 18px;
        color: #484848;
        margin-bottom: 3em;
        font-family: 'Gothambook';
    }

.homepara{
        color: #484848;
        text-align: center;
        font-size:18px;
        padding: 0% 11%;
        font-family: 'Gothambook';
    }

    .home-label{
        padding: 10px 0px;
        text-align: center;
        color: #484848;
    }
    .home-label span{
        font-size:50px;
        font-family: Trumpgothiceastbold;
    }
    .home-label p{
        font-size:16px;
        font-family: 'Gothambook';
        margin: auto
    }
    .head_2{
        font-size:35px;
        font-weight:bold;
        color: #484848;
        font-family: Gothambold;
    }
    .text h1 {
      z-index: 100;
      position: absolute;
      color: white;
      left: 15px;
      top: 0px;
      font-family: Trumpgothiceastbold;
      font-size: 30px;
      text-transform: uppercase;
    }
    .text p {
      z-index: 100;
      position: absolute;
      color: white;
      font-size: 15px;
      left: 15px;
      bottom: 0px;
      padding-right: 35px;
      font-family:Gothambook;
    }
    .divider1{
        
        left:35%;
        top:10%;    
        bottom:10%;
        border-left:2px solid #484848;
    }
    .divider2{
        
        right: 35%;
        top: 10%;
        bottom: 10%;
        border-left: 2px solid #484848;
    }

.faq-book {
    text-align: center;
    margin-top: 25px;
    margin-bottom: 25px;
    
}
.faq-book a {
    font-weight: bold;
    font-size: 16px;
}

    .navbar-inverse {
        background-color: transparent;
        border-color: transparent;
    }
    .panel_one{
        background-color: #4577D8;
        padding: 25px;
        height: 70px;
    }
    .panel_two{
        background-color: #25377d;
        padding: 25px;
        height: 70px;
    }
    .form-bottom {
        padding: 25px 25px 30px 25px;
        background: #25377d;
        text-align: left;
        height: 100px;
    }
    .clear-pad-RL{
        padding-left:0px;
        padding-right:0px;
    }
    .clear-pad-R{
        padding-right:0px;
    }
    .clear-pad-L{
        padding-left:0px;
    }
    . {
        padding-left:0px;
    }
    .clear-pad-form{
        padding-left:5px;
        padding-right:5px;
    }
    .mar-down{
        margin-bottom:20px;
    }

    /* Form elements CSS*/

    textarea, 
    textarea.form-control {
        padding-top: 10px;
        padding-bottom: 10px;
        line-height: 30px;
    }

    ::-webkit-input-placeholder {
       color: white;
       font-family: Gothambook;
    }

    :-moz-placeholder { /* Firefox 18- */
       color: white;
    font-family: Gothambook;   
    }

    ::-moz-placeholder {  /* Firefox 19+ */
       color: white;  
       font-family: Gothambook;
    }

    :-ms-input-placeholder {  
       color: white;  
       font-family: Gothambook;
    }
/* ... */

